--- a/src/app/features/rfq/suppliers/suppliers-dialog.html
+++ b/src/app/features/rfq/suppliers/suppliers-dialog.html
@@ -4,45 +4,65 @@
   <!--  -->
   <div class="row p-t-15 p-b-10">
     <!--  -->
-    <div class="col-xs-4 display-flex justify-content-center">
+    <div class="col-xs-4 display-flex">
       <mat-form-field class="input-search-padding-zero pull-right">
-        <input matInput placeholder="Ravi Supplier" />
+        <input
+          type="text"
+          disabled="true"
+          matInput
+          placeholder="Ravi Supplier"
+        />
       </mat-form-field>
     </div>
 
     <!--  -->
-    <div class="col-xs-4 display-flex justify-content-center">
+    <div class="col-xs-4 display-flex">
       <mat-form-field class="input-search-padding-zero pull-right">
-        <input matInput placeholder="ravi.singh@gmail.com" />
+        <input
+          matInput
+          type="email"
+          disabled="true"
+          placeholder="ravi.singh@gmail.com"
+        />
       </mat-form-field>
     </div>
 
     <!--  -->
-    <div class="col-xs-4 display-flex justify-content-center">
+    <div class="col-xs-4 display-flex">
       <mat-form-field class="input-search-padding-zero pull-right">
-        <input matInput placeholder="9876543456" />
+        <input
+          matInput
+          type="number"
+          disabled="true"
+          placeholder="9876543456"
+        />
+      </mat-form-field>
+    </div>
+  </div>
+
+  <div class="row p-t-15 p-b-10">
+    <!--  -->
+    <div class="col-xs-4 display-flex">
+      <mat-form-field class="input-search-padding-zero pull-right">
+        <input matInput type="text" placeholder="Supplier Name" />
       </mat-form-field>
     </div>
 
     <!--  -->
-    <div class="col-xs-4 display-flex justify-content-center">
+    <div class="col-xs-4 display-flex">
       <mat-form-field class="input-search-padding-zero pull-right">
-        <input matInput placeholder="Supplier Name" />
+        <input matInput type="email" placeholder="Email" />
       </mat-form-field>
     </div>
 
     <!--  -->
-    <div class="col-xs-4 display-flex justify-content-center">
+    <div class="col-xs-4 display-flex">
       <mat-form-field class="input-search-padding-zero pull-right">
-        <input matInput placeholder="Email" />
+        <input matInput type="number" placeholder="Phone No." />
       </mat-form-field>
-    </div>
-
-    <!--  -->
-    <div class="col-xs-4 display-flex justify-content-center">
-      <mat-form-field class="input-search-padding-zero pull-right">
-        <input matInput placeholder="Phone No." />
-      </mat-form-field>
+      <button class="main-background-color round-button full-border">
+        <mat-icon class="color-white">add</mat-icon>
+      </button>
     </div>
   </div>
 </div>
