--- a/src/app/features/rfq/suppliers/suppliers.component.html
+++ b/src/app/features/rfq/suppliers/suppliers.component.html
@@ -63,6 +63,7 @@
           </button>
         </mat-form-field>
       </div>
+
       <div class="text-right col-xs-2">
         <button
           mat-raised-button
@@ -110,7 +111,7 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <button mat-button class="display-flex pull-right">
-            <mat-icon>delete</mat-icon>
+            <mat-icon>delete_outline</mat-icon>
           </button>
         </td>
       </ng-container>
