--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -217,7 +217,8 @@ a:hover {
   padding-top: 0px !important;
 }
 
-// Muskaan's edit
-.justify-content-center {
-  justify-content: center;
+//Muskaan's edit
+.round-button {
+  border: none;
+  border-radius: 50%;
 }
