--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -5,7 +5,7 @@
   <div class="row p-t-15 p-b-10">
     <!--  -->
     <div class="col-xs-4 display-flex">
-      <mat-form-field class="input-search-padding-zero pull-right">
+      <mat-form-field class="border-input">
         <input
           type="text"
           disabled="true"
@@ -17,7 +17,7 @@
 
     <!--  -->
     <div class="col-xs-4 display-flex">
-      <mat-form-field class="input-search-padding-zero pull-right">
+      <mat-form-field class="border-input">
         <input
           matInput
           type="email"
@@ -29,7 +29,7 @@
 
     <!--  -->
     <div class="col-xs-4 display-flex">
-      <mat-form-field class="input-search-padding-zero pull-right">
+      <mat-form-field class="border-input">
         <input
           matInput
           type="number"
@@ -43,25 +43,27 @@
   <div class="row p-t-15 p-b-10">
     <!--  -->
     <div class="col-xs-4 display-flex">
-      <mat-form-field class="input-search-padding-zero pull-right">
+      <mat-form-field class="border-input">
         <input matInput type="text" placeholder="Supplier Name" />
       </mat-form-field>
     </div>
 
     <!--  -->
     <div class="col-xs-4 display-flex">
-      <mat-form-field class="input-search-padding-zero pull-right">
+      <mat-form-field class="border-input">
         <input matInput type="email" placeholder="Email" />
       </mat-form-field>
     </div>
 
     <!--  -->
     <div class="col-xs-4 display-flex">
-      <mat-form-field class="input-search-padding-zero pull-right">
+      <mat-form-field class="border-input">
         <input matInput type="number" placeholder="Phone No." />
       </mat-form-field>
-      <button class="main-background-color round-button full-border">
-        <mat-icon class="color-white">add</mat-icon>
+      <button
+        class="main-background-color round-button full-border m-l-40 m-t-5"
+      >
+        <mat-icon class="color-white m-t-5">add</mat-icon>
       </button>
     </div>
   </div>
@@ -70,7 +72,7 @@
 <div mat-dialog-actions class="pull-right">
   <button
     mat-raised-button
-    class="main-background-color main-button color-white"
+    class="main-background-color main-button color-white m-b-5"
     [mat-dialog-close]=""
     cdkFocusInitial
   >
