--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -85,11 +85,36 @@
             <ng-container matColumnDef="Total Supplier">
               <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
               <td mat-cell *matCellDef="let element" class="text-align-center">
-                {{
+                 
+                 
+              <div class="supplier-qty-div">
+                <div>
+                    {{
                   element.supplierList != null
                     ? element.supplierList.length
                     : ""
                 }}
+                </div>
+                
+                 <div class="show-detail-supplier" *ngIf="element.supplierList.length>0">
+                  <img src="../../../../assets/images/i_icon.png">
+                    <div id="detail-supplier">
+                      <div class="row">
+                        <div class="col-sm-12">
+                         <span class="supplier-name-tag">Supplier Name</span>
+                         <ng-container *ngFor="let name of element.supplierList">
+                           <span><br>
+                             {{name.supplierName}}
+                           </span>
+                         </ng-container>
+                        </div>
+                       
+                      </div>
+                  </div>
+                </div> 
+        
+             </div>
+
               </td>
             </ng-container>
             <ng-container matColumnDef="action1">
@@ -155,11 +180,36 @@
             <ng-container matColumnDef="Total Supplier">
               <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
               <td mat-cell *matCellDef="let element" class="text-align-center">
-                {{
+               
+           <div class="supplier-qty-div">
+                <div>
+                    {{
                   element.supplierList != null
                     ? element.supplierList.length
                     : ""
                 }}
+                </div>
+                
+                 <div class="show-detail-supplier" *ngIf="element.supplierList.length>0">
+                  <img src="../../../../assets/images/i_icon.png">
+                    <div id="detail-supplier">
+                      <div class="row">
+                        <div class="col-sm-12">
+                         <span class="supplier-name-tag">Supplier Name</span>
+                         <ng-container *ngFor="let name of element.supplierList">
+                           <span><br>
+                             {{name.supplierName}}
+                           </span>
+                         </ng-container>
+                        </div>
+                       
+                      </div>
+                  </div>
+                </div> 
+        
+             </div>
+
+
               </td>
             </ng-container>
             <ng-container matColumnDef="action1">
