--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -11,11 +11,11 @@
         <div class="project-profile">
           <img src="../../../../assets/images/2020-01-08.jpg" />
         </div>
-        <div class="upload-photo-btn">
+        <!-- <div class="upload-photo-btn">
           <button type="button" (click)="uploadPhoto()">
             <span aria-hidden="true">Upload Photo</span>
           </button>
-        </div>
+        </div> -->
       </div>
       <!-- new structure -->
       <div class="col-sm-10 add-edit-form-dialog">
@@ -100,7 +100,7 @@
             <!-- start date -->
             <mat-form-field class="border-input">
               <mat-label>Project Start Date*</mat-label>
-              <input matInput [matDatepicker]="startDate" formControlName="startDate" />
+              <input matInput [matDatepicker]="startDate" formControlName="startDate" [min]="minDate" />
               <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
               <mat-datepicker #startDate startView="month" [startAt]="startDate"></mat-datepicker>
             </mat-form-field>
@@ -109,7 +109,7 @@
             <!-- end date -->
             <mat-form-field class="border-input">
               <mat-label>Project End Date*</mat-label>
-              <input matInput [matDatepicker]="endDate" formControlName="endDate" />
+              <input matInput [matDatepicker]="endDate" formControlName="endDate" [min]="minDate" />
               <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
               <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
             </mat-form-field>
