--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -40,10 +40,10 @@
       </button>
     </div>
     <div *ngIf="buttonName === 'materialWise'; else elseBlock">
-      <app-material-wise [materialData]="globalStoreData[0].data"></app-material-wise>
+      <app-material-wise [materialData]="globalStoreData"></app-material-wise>
     </div>
     <ng-template #elseBlock>
-      <app-project-wise [projectData]="globalStoreData[1].data"></app-project-wise>
+      <app-project-wise *ngIf="projectWiseData.length" [projectData]="projectWiseData"></app-project-wise>
     </ng-template>
   </div>
 </div>
