--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -1,10 +1,10 @@
 <mat-accordion displayMode="flat" multi class="mat-table">
   <section matSort class="mat-header-row blue-background-color-color-white-section">
-    <span class="mat-header-cell" mat-sort-header="vesselName">Name</span>
-    <span class="mat-header-cell" mat-sort-header="vesselId">Estimated Quantity</span>
-    <span class="mat-header-cell" mat-sort-header="vesselStatus">Requested Quantity</span>
-    <span class="mat-header-cell" mat-sort-header="ircs">Required Date</span>
-    <span class="mat-header-cell" mat-sort-header="ircs">Available quantity in project</span>
+    <span class="mat-header-cell" mat-sort-header="name">Name</span>
+    <span class="mat-header-cell" mat-sort-header="estimatedQty">Estimated Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Requested Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
+    <span class="mat-header-cell" mat-sort-header="availableQuantity">Available quantity in project</span>
   </section>
   <mat-expansion-panel *ngFor="let material of newMaterialData" class="myPanel">
     <mat-expansion-panel-header class="mat-row material-row">
