--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -71,13 +71,9 @@
             type="text"
             placeholder="Phone No"
             formControlName="contactNo"/>
-          <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
-          <!-- <small
-              *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched"
-              class="form-error-msg"> Phone No is required </small>
               <small
               *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
-              class="form-error-msg"> Enter Valid Phone No</small> -->
+              class="form-error-msg"> Enter Valid Phone No</small>
         </mat-form-field>
           </div>
         </div>
