--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -32,7 +32,7 @@
     <div fxShow="true" fxHide.lt-md>
       <button mat-button [matMenuTriggerFor]="logIn">
         <img class="img-circle" height="36" width="38" src="../../../../assets/images/user-image.jpg" alt="Test" />
-        Test
+        {{userName}}
         <mat-icon aria-hidden="false" aria-label="Example arrow_drop_down icon">arrow_drop_down</mat-icon>
       </button>
       <mat-menu #logIn="matMenu">
