--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -19,7 +19,7 @@
                     <small
                     *ngIf="signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched"
                     class="signupForm-error-msg p-l-12"> Enter Valid Phone No</small>
-                    <small *ngIf="lessOTPDigits" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
+                    <small *ngIf="lessOTPDigits && (signupForm.controls['phone'].value.length==10) && (!uniqueCode)" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
                </div>
 
                 <mat-form-field class="col-xs-12 border-input" *ngIf="showOtp && !lessOTPDigits">
