--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="signupForm" [formGroup]="signupForm" (ngSubmit)="signup()" class="sign-up-form">
+<form *ngIf="signupForm" [formGroup]="signupForm" class="sign-up-form">
  
                 <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="firstName" type="text" placeholder="First Name" />
@@ -10,7 +10,7 @@
                     <mat-form-field class="col-xs-12 border-input display-flex">
                     <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone" #phone placeholder="Phone No." (input)="enterPhone($event)" />
                     <button *ngIf="!lessOTPDigits"  mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="phone.value.length != 10" (click)="sendOtpBtn()">
-                        Send Otp 
+                        Send OTP 
                     </button>
                 </mat-form-field>
                   <small
@@ -19,7 +19,7 @@
                     <small
                     *ngIf="signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched"
                     class="signupForm-error-msg p-l-12"> Enter Valid Phone No</small>
-                    <small *ngIf="lessOTPDigits && (signupForm.controls['phone'].value.length==10) && (!uniqueCode)" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
+                    <small *ngIf="lessOTPDigits" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
                </div>
 
                 <mat-form-field class="col-xs-12 border-input" *ngIf="showOtp && !lessOTPDigits">
@@ -65,8 +65,8 @@
                 </mat-form-field> -->
                    
                 <div mat-dialog-actions class="col-xs-12 p-t-40">
-                    <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-                        cdkFocusInitial style="width: 100%;" [disabled]="!signupForm.valid || !lessOTPDigits || !emailVerified">
+                    <button mat-raised-button class="main-background-color main-button color-white m-b-5" 
+                        cdkFocusInitial style="width: 100%;" [disabled]="!signupForm.valid || !lessOTPDigits || !emailVerified" (click)="signup()">
                         Sign Up
                     </button>
                 </div>
