--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -65,7 +65,7 @@
                   </mat-error>
                 </mat-error>
 
-                <mat-form-field class="border-select w-100">
+                <mat-form-field class="border-select w-100" *ngIf="users.roleName != 'l3'">
                   <mat-label>Role</mat-label>
                   <mat-select formControlName="roleId">
                     <mat-option *ngFor="let role of roles" [value]="role.roleId">
@@ -73,6 +73,10 @@
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
+                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l3'">
+                  <input matInput type="text" placeholder="Role" formControlName="roleDescription" />
+                </mat-form-field>
+
                 <mat-error *ngIf="userInfoForm.controls['roleId'].errors && (userInfoForm.controls['roleId'].dirty || userInfoForm.controls['roleId'].touched)">
                   <mat-error *ngIf="userInfoForm.controls['roleId'].hasError('required')"> Role is required</mat-error>
                 </mat-error>
