--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -107,7 +107,8 @@
                 </td>
                 <td class="text-align-right">
                   <mat-form-field class="border-input">
-                    <input matInput type="number" placeholder="GST %" [(ngModel)]="material.materialIgst"
+                    <input matInput type="number" placeholder="GST %" [(ngModel)]="material.materialIgst"  min="0"
+                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
                       (change)="valueChange(rfqSupplierDetailList)" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57"/>
                     <mat-error>GST is Required</mat-error>
                   </mat-form-field>
@@ -130,7 +131,8 @@
                   
                   <td>
                     <mat-form-field class="border-input">
-                      <input matInput type="number" placeholder="Rate" [(ngModel)]="brand.brandRate"
+                      <input matInput type="number" placeholder="Rate"  min="0"
+                  onkeypress="return event.charCode >= 48 && event.charCode <= 57" [(ngModel)]="brand.brandRate"
                         (change)="valueChange(rfqSupplierDetailList)" />
                       <mat-error>Project Name is Required</mat-error>
                     </mat-form-field>
