--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -5,89 +5,92 @@
       <div class="col-md-12">
         <div class="row p-b-10">
           <div class="col-md-5 col-xs-12 p-t-10">
-            
             <label for="validity" class="pull-left p-t-20 p-r-10">Quote Valid till</label>
-            
+
             <mat-form-field class="border-input date-label-indent">
-                 <span class="form-placeholder">{{ dateDue| date: "dd-MMM-yyy"}}</span>
-              <input matInput hidden (dateChange)="duedatefunc($event)" [matDatepicker]="dueDate"
-                placeholder="Quote Valid till" [(ngModel)]="rfqSupplierDetailList.quoteValidTill" 
-                (focus)="dueDate.open()" readonly [min]="minDate" required />
-              
+              <span class="form-placeholder">{{ dateDue | date: "dd-MMM-yyy" }}</span>
+              <input
+                matInput
+                hidden
+                (dateChange)="duedatefunc($event)"
+                [matDatepicker]="dueDate"
+                placeholder="Quote Valid till"
+                [(ngModel)]="rfqSupplierDetailList.quoteValidTill"
+                (focus)="dueDate.open()"
+                readonly
+                [min]="minDate"
+                required
+              />
+
               <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
 
               <mat-datepicker #dueDate (keyup)="valueChange(rfqSupplierDetailList)"></mat-datepicker>
               <!-- startView="month" [startAt]="dueDate" -->
             </mat-form-field>
-            
           </div>
 
           <div class="col-md-5 col-xs-8 p-t-10">
             <label for="bidCompletion" class="pull-left p-t-20 p-r-10">Bid Completion:</label>
-            <span class="pull-left text-semi-bold m-t-20">{{brandCount}}/{{materialCount}}</span>
-            
-            <span  class="pull-right text-semi-bold m-t-20">
-              RFQ Expiry Date :: {{rfqSupplierDetailList.dueDate | date: "dd-MMM-yyy"}}
-            </span>
+            <span class="pull-left text-semi-bold m-t-20">{{ brandCount }}/{{ materialCount }}</span>
+
+            <span class="pull-right text-semi-bold m-t-20"> RFQ Expiry Date :: {{ rfqSupplierDetailList.dueDate | date: "dd-MMM-yyy" }} </span>
           </div>
 
           <div class="col-md-2 col-xs-4 p-t-20">
-            <button mat-raised-button [disabled]="!submitButtonValidationFlag"
+            <button
+              mat-raised-button
+              [disabled]="!submitButtonValidationFlag"
               class="main-background-color main-button color-white pull-right"
-              (click)="postRFQDetailSupplier(rfqSupplierDetailList)">
+              (click)="postRFQDetailSupplier(rfqSupplierDetailList)"
+            >
               Next
             </button>
           </div>
         </div>
 
-
-      <div class="material-rfq-supplies p-15 p-l-30 font-bold">
-        <span>
-          Payment Details :
-        </span>
-        <span *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms &&  rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc != null" class="p-l-20">
-            {{rfqSupplierDetailList.terms.termsDesc}}
-        </span>
-         <span *ngIf="(rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc != null)" class="p-l-20">
-           {{rfqSupplierDetailList.terms.otherDesc}}
-        </span>
-         <span *ngIf="(rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc === null)" class="p-l-20">
-          -
-        </span>
-      </div>
+        <div class="material-rfq-supplies p-15 p-l-30 font-bold">
+          <span>
+            Payment Details :
+          </span>
+          <span
+            *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc != null"
+            class="p-l-20"
+          >
+            {{ rfqSupplierDetailList.terms.termsDesc }}
+          </span>
+          <span *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc != null" class="p-l-20">
+            {{ rfqSupplierDetailList.terms.otherDesc }}
+          </span>
+          <span
+            *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.terms && rfqSupplierDetailList.terms.otherDesc === null && rfqSupplierDetailList.terms.termsDesc === null"
+            class="p-l-20"
+          >
+            -
+          </span>
+        </div>
 
         <div style="width:100%;overflow-x:scroll">
           <table class="table rfq-bids-table" *ngFor="let projects of rfqSupplierDetailList.projectList">
-
             <!-- Project Name Header -->
             <tr class="blue-background-color color-white">
-              <th class="font-size18 limited-character" >
+              <th class="font-size18 limited-character">
                 <span>
-                    {{projects.projectName}}
+                  {{ projects.projectName }}
                 </span>
               </th>
 
               <th class="font-size14" colspan="2">
-               <span *ngIf="projects.addressLine1">
-                 {{projects.addressLine1}}
-               </span> 
-                <span *ngIf="projects.addressLine2">
-                 , {{projects.addressLine2}}
+                <span *ngIf="projects.addressLine1">
+                  {{ projects.addressLine1 }}
                 </span>
-               <span *ngIf="projects.city">
-                 , {{projects.city}}
-               </span> 
-                <span *ngIf="projects.state">
-                  , {{projects.state}}
-                </span>
-                <span *ngIf="projects.pinCode">
-                  , {{projects.pinCode}}
-                </span>
+                <span *ngIf="projects.addressLine2"> , {{ projects.addressLine2 }} </span>
+                <span *ngIf="projects.city"> , {{ projects.city }} </span>
+                <span *ngIf="projects.state"> , {{ projects.state }} </span>
+                <span *ngIf="projects.pinCode"> , {{ projects.pinCode }} </span>
               </th>
 
               <th class="white-radiobutton">
-                <mat-radio-group aria-label="Select GST" class="pull-right" [(ngModel)]="projects.gst"
-                  (change)="radioChange($event,projects)">
+                <mat-radio-group aria-label="Select GST" class="pull-right" [(ngModel)]="projects.gst" (change)="radioChange($event, projects)">
                   <mat-radio-button class="p-r-20" value="IGST">IGST</mat-radio-button>
                   <mat-radio-button value="CGST-SGST">CGST & SGST</mat-radio-button>
                 </mat-radio-group>
@@ -99,20 +102,26 @@
               <tr matSort class="material-rfq-supplies">
                 <td class="font-size14 limited-character">
                   <span>
-                    {{material.materialName}}
-                  </span></td>
-                <td class="font-size14">Requested Quantity: {{material.materialQuantity}}
-                  {{material.materialUnit}}
+                    {{ material.materialName }}
+                  </span>
                 </td>
-                <td  class="font-size14">
-                  Required Date : {{material.fullfilmentDate | date: "dd-MMM-yyy"}}
+                <td class="font-size14">
+                  Requested Quantity: {{ material.materialQuantity }}
+                  {{ material.materialUnit }}
                 </td>
+                <td class="font-size14">Required Date : {{ material.fullfilmentDate | date: "dd-MMM-yyy" }}</td>
                 <td class="text-align-right">
                   <mat-form-field class="border-input">
-                    <input matInput type="number" placeholder="GST %" [(ngModel)]="material.Igst"  min="0"
-                     onkeypress="return ((event.charCode > 47 && event.charCode < 58) 
+                    <input
+                      matInput
+                      type="number"
+                      placeholder="GST %"
+                      [(ngModel)]="material.Igst"
+                      min="0"
+                      onkeypress="return ((event.charCode > 47 && event.charCode < 58) 
       || event.charCode == 46)"
-                      (keyup)="valueChange(rfqSupplierDetailList,$event)"/>
+                      (keyup)="valueChange(rfqSupplierDetailList)"
+                    />
                     <mat-error>GST is Required</mat-error>
                   </mat-form-field>
                 </td>
@@ -129,37 +138,37 @@
 
                 <!-- Brand-wise details -->
                 <tr class="table-white-background-color" *ngFor="let brand of material.rfqBrandList">
-                  
-                  <td>{{brand.brandName}}</td>
-                  
+                  <td>{{ brand.brandName }}</td>
+
                   <td>
                     <mat-form-field class="border-input">
-                      <input matInput type="number" placeholder="Rate"  min="0"
-                       onkeypress="return ((event.charCode > 47 && event.charCode < 58) 
+                      <input
+                        matInput
+                        type="number"
+                        placeholder="Rate"
+                        min="0"
+                        onkeypress="return ((event.charCode > 47 && event.charCode < 58) 
                        || event.charCode == 46)"
-                       title="Rates must be valid" [(ngModel)]="brand.tempRate"
-                        (keyup)="valueChange(rfqSupplierDetailList,$event)" />
+                        title="Rates must be valid"
+                        [(ngModel)]="brand.tempRate"
+                        (keyup)="valueChange(rfqSupplierDetailList)"
+                      />
                       <mat-error>Rate is Required</mat-error>
                     </mat-form-field>
                   </td>
-                  
-                  <td class="text-align-right">{{(brand.brandRate * material.materialQuantity | number:'1.2-2')}}</td>
-                  
+
+                  <td class="text-align-right">{{ brand.brandRate * material.materialQuantity | number: "1.2-2" }}</td>
+
                   <td class="text-align-right">
                     <span *ngIf="!brand.brandRate">0.00</span>
-                    <span
-                      *ngIf="brand.brandRate">{{((material.Igst/100)*(brand.brandRate * material.materialQuantity)) | number:'1.2-2'}}</span>
+                    <span *ngIf="brand.brandRate">{{ (material.Igst / 100) * (brand.brandRate * material.materialQuantity) | number: "1.2-2" }}</span>
                   </td>
                 </tr>
               </ng-container>
             </ng-container>
-
           </table>
-
         </div>
-
       </div>
     </div>
-
   </div>
 </div>
