--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -94,3 +94,33 @@ div.limited-character.universal {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.breadcrumb {
+  background: none;
+  font-size: 0.8em;
+  margin: 0;
+  a,
+  span {
+    color: darkgrey;
+  }
+  a:hover,
+  span:hover {
+    color: dimgrey;
+    text-decoration: none;
+  }
+  li {
+    list-style: none;
+    float: left;
+    margin: 5px;
+  }
+  li:last-child {
+    margin-right: 20px;
+  }
+  li::after {
+    content: "->";
+    color: darkgrey;
+  }
+  li:last-child::after {
+    content: "";
+  }
+}
